# parrot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
src/: client.rs  errors.rs  lib.rs  main.rs  utils.rs
src/commands/: leave.rs  manage_sources.rs  play.rs  queue.rs  remove.rs  seek.rs  shuffle.rs  skip.rs  summon.rs  voteskip.rs
src/handlers/: idle.rs  serenity.rs  track_end.rs
src/messaging/: message.rs
src/sources/: spotify.rs
