[package]
name = "parrot"
version = "1.6.0"
authors = ["aquelemiguel"]
edition = "2018"
description = "A Discord music bot built in Rust"
repository = "https://github.com/aquelemiguel/parrot"
license = "MIT"
keywords = ["discord", "music-bot", "rust"]

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.5.0"
rand = "0.9.2"
regex = "1.11.1"
rspotify = "0.15.0"
serde_json = "1.0.142"
url = "2.5.4"
serde = "1.0.219"

# classic this is used by songbird but they don't republish the package so we have to manually keep it in sync
reqwest = { default-features = false, features = [
  "stream",
], version = "0.12.2" }

[dependencies.songbird]
version = "0.5.0"
features = ["builtin-queue"]

[dependencies.serenity]
version = "0.12.4"
default-features = false
features = [
  "cache",
  "collector",
  "client",
  "gateway",
  "model",
  "rustls_backend",
  "unstable_discord_api",
  "voice",
]

[dependencies.tokio]
version = "1.47.1"
features = ["macros", "rt-multi-thread"]
