[package]
name = "parrot"
version = "1.6.0"
authors = ["aquelemiguel"]
edition = "2018"
description = "A Discord music bot built in Rust"
repository = "https://github.com/aquelemiguel/parrot"
license = "MIT"
keywords = ["discord", "music-bot", "rust"]

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.5.0"
rand = "0.9.2"
regex = "1.11.1"
rspotify = "0.15.0"
serde_json = "1.0.142"
url = "2.5.4"
serde = "1.0.219"
rustls = { version = "0.23.31", features = ["aws-lc-rs"] }

env_logger = "0.11"
log = "0.4"

# classic this is used by songbird but they don't republish the package so we have to manually keep it in sync
reqwest = { default-features = false, features = [
  "stream",
], version = "0.12.2" }

[dependencies.songbird]
#version = "0.5.0"
git = "https://github.com/MincoMK/songbird.git"
rev = "9dfd04e41b2865603c258ad48839b05e105c6c09"
features = ["builtin-queue"]

[dependencies.symphonia]
version = "0.5"
features = ["all"]

[dependencies.serenity]
version = "0.12.4"
default-features = false
features = [
  "cache",
  "collector",
  "client",
  "gateway",
  "model",
  "rustls_backend",
  "voice",
]

[dependencies.tokio]
version = "1.47.1"
features = ["macros", "rt-multi-thread"]
