[package]
name = "parrot"
version = "1.6.0"
authors = ["aquelemiguel"]
edition = "2018"
description = "A Discord music bot built in Rust"
repository = "https://github.com/aquelemiguel/parrot"
license = "MIT"
keywords = ["discord", "music-bot", "rust"]

[dependencies]
dotenv = "0.15"
lazy_static = "1.5"
rand = "0.9"
regex = "1.11"
rspotify = "0.15"
serde_json = "1.0"
url = "2.5"
serde = "1.0"
rustls = "0.23"

env_logger = "0.11"
log = "0.4"

reqwest = { default-features = false, features = ["stream"], version = "0.12" }

[dependencies.songbird]
#version = "0.5.0"
git = "https://github.com/shoebe/songbird"
features = ["builtin-queue"]

[dependencies.symphonia]
version = "0.5"
features = ["all"]

[dependencies.serenity]
version = "0.12"
default-features = false
features = [
  "cache",
  "collector",
  "client",
  "gateway",
  "model",
  "rustls_backend",
  "voice",
]

[dependencies.tokio]
version = "1.47"
features = ["macros", "rt-multi-thread"]
